added courses page

--- a/courses.html
+++ b/courses.html
@@ -113,6 +113,123 @@
             </div>
             <!-- End Head -->
             <h1 class="p-relative">Courses</h1>
+            <div class="courses-page d-grid m-20 gap-20 c-gold txt-tf-c">
+                <div class="course rad-8 bg-red-alt p-relative">
+                    <img src="images/c-1.jpg" alt="" class="cover">
+                    <img src="images/ln-4.jpg" alt="" class="instructor">
+                    <div class="p-20">
+                        <h4 class="">Introduction to HTML & CSS</h4>
+                        <p class="description mt-15">Basic course covering fundamentals of HTML and CSS for web development</p>
+                    </div>
+                    <div class="info p-15 p-relative between-flex">
+                        <span class="title bg-gold c-red btn-shape">course info</span>
+                        <span>
+                            <i class="fa-regular fa-user"></i>
+                            950
+                        </span>
+                        <span class="">
+                            <i class="fa-solid fa-dollar-sign"></i>
+                            165
+                        </span>
+                    </div>
+                </div>
+                <div class="course rad-8 bg-red-alt p-relative">
+                    <img src="images/c-2.jpg" alt="" class="cover">
+                    <img src="images/ln-2.jpg" alt="" class="instructor">
+                    <div class="p-20">
+                        <h4 class="">Advanced JavaScript Techniques</h4>
+                        <p class="description mt-15">Basic course covering fundamentals of HTML and CSS for web development</p>
+                    </div>
+                    <div class="info p-15 p-relative between-flex">
+                        <span class="title bg-gold c-red btn-shape">course info</span>
+                        <span>
+                            <i class="fa-regular fa-user"></i>
+                            4548
+                        </span>
+                        <span class="">
+                            <i class="fa-solid fa-dollar-sign"></i>
+                            1232
+                        </span>
+                    </div>
+                </div>
+                <div class="course rad-8 bg-red-alt p-relative">
+                    <img src="images/c-3.jpg" alt="" class="cover">
+                    <img src="images/ln-3.jpg" alt="" class="instructor">
+                    <div class="p-20">
+                        <h4 class="">Web Design Principles</h4>
+                        <p class="description mt-15">Basic course covering fundamentals of HTML and CSS for web development</p>
+                    </div>
+                    <div class="info p-15 p-relative between-flex">
+                        <span class="title bg-gold c-red btn-shape">course info</span>
+                        <span>
+                            <i class="fa-regular fa-user"></i>
+                            2845
+                        </span>
+                        <span class="">
+                            <i class="fa-solid fa-dollar-sign"></i>
+                            8547
+                        </span>
+                    </div>
+                </div>
+                <div class="course rad-8 bg-red-alt p-relative">
+                    <img src="images/c-4.jpg" alt="" class="cover">
+                    <img src="images/ln-5.jpg" alt="" class="instructor">
+                    <div class="p-20">
+                        <h4 class="">Introduction to Python Programming</h4>
+                        <p class="description mt-15">Basic course covering fundamentals of HTML and CSS for web development</p>
+                    </div>
+                    <div class="info p-15 p-relative between-flex">
+                        <span class="title bg-gold c-red btn-shape">course info</span>
+                        <span>
+                            <i class="fa-regular fa-user"></i>
+                            327
+                        </span>
+                        <span class="">
+                            <i class="fa-solid fa-dollar-sign"></i>
+                            8984
+                        </span>
+                    </div>
+                </div>
+                <div class="course rad-8 bg-red-alt p-relative">
+                    <img src="images/c-5.jpg" alt="" class="cover">
+                    <img src="images/ln-6.jpg" alt="" class="instructor">
+                    <div class="p-20">
+                        <h4 class="">Data Analysis with Pytho</h4>
+                        <p class="description mt-15">Basic course covering fundamentals of HTML and CSS for web development</p>
+                    </div>
+                    <div class="info p-15 p-relative between-flex">
+                        <span class="title bg-gold c-red btn-shape">course info</span>
+                        <span>
+                            <i class="fa-regular fa-user"></i>
+                            756
+                        </span>
+                        <span class="">
+                            <i class="fa-solid fa-dollar-sign"></i>
+                            34
+                        </span>
+                    </div>
+                </div>
+                <div class="course rad-8 bg-red-alt p-relative">
+                    <img src="images/c-7.jpg" alt="" class="cover">
+                    <img src="images/ln-7.jpg" alt="" class="instructor">
+                    <div class="p-20">
+                        <h4 class="">Machine Learning Basics</h4>
+                        <p class="description mt-15">Basic course covering fundamentals of HTML and CSS for web development</p>
+                    </div>
+                    <div class="info p-15 p-relative between-flex">
+                        <span class="title bg-gold c-red btn-shape">course info</span>
+                        <span>
+                            <i class="fa-regular fa-user"></i>
+                            4323
+                        </span>
+                        <span class="">
+                            <i class="fa-solid fa-dollar-sign"></i>
+                            34
+                        </span>
+                    </div>
+                </div>
+                
+            </div>
         </div>
     </div>
 </body>
