i has just finshed page

--- a/friends.html
+++ b/friends.html
@@ -113,6 +113,201 @@
             </div>
             <!-- End Head -->
             <h1 class="p-relative">Friends</h1>
+            <div class="friends-page c-gold txt-tf-c d-grid m-20 gap-20">
+                <div class="friend bg-red-alt rad-8 p-20 p-relative">
+                    <div class="contact">
+                        <i class="fa-solid fa-phone"></i>
+                        <i class="fa-regular fa-envelope"></i>
+                    </div>
+                    <div class="txt-c">
+                        <img src="images/ln-2.jpg" alt="" class="rad-half mt-10 mb-10 w-100">
+                        <h4 class="m-0">mohammed fayyad</h4>
+                        <p class="mt-5 fs-12">brother</p>
+                    </div>
+                    <div class="icons p-relative">
+                        <div class="mb-10">
+                            <i class="fa-regular fa-face-smile fa-fw"></i>
+                            <span>99 friend</span>
+                        </div>
+                        <div class="mb-10">
+                            <i class="fa-solid fa-code-commit fa-fw"></i>
+                            <span>15 projects</span>
+                        </div>
+                        <div>
+                            <i class="fa-regular fa-newspaper fa-fw"></i>
+                            <span>25 articles</span>
+                        </div>
+                    </div>
+                    <div class="info between-flex">
+                        <span class="">joined 02/01/2024</span>
+                        <div class="">
+                            <a href="profile.html" class="btn-shape">profile</a>
+                            <a href="#" class="btn-shape">remove</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="friend bg-red-alt rad-8 p-20 p-relative">
+                    <div class="contact">
+                        <i class="fa-solid fa-phone"></i>
+                        <i class="fa-regular fa-envelope"></i>
+                    </div>
+                    <div class="txt-c">
+                        <img src="images/ln-3.jpg" alt="" class="rad-half mt-10 mb-10 w-100">
+                        <h4 class="m-0">abdelaziz carbon</h4>
+                        <p class="mt-5 fs-12">brother</p>
+                    </div>
+                    <div class="icons p-relative">
+                        <div class="mb-10">
+                            <i class="fa-regular fa-face-smile fa-fw"></i>
+                            <span>99 friend</span>
+                        </div>
+                        <div class="mb-10">
+                            <i class="fa-solid fa-code-commit fa-fw"></i>
+                            <span>15 projects</span>
+                        </div>
+                        <div>
+                            <i class="fa-regular fa-newspaper fa-fw"></i>
+                            <span>25 articles</span>
+                        </div>
+                    </div>
+                    <div class="info between-flex">
+                        <span class="">joined 02/01/2024</span>
+                        <div class="">
+                            <a href="profile.html" class="btn-shape">profile</a>
+                            <a href="#" class="btn-shape">remove</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="friend bg-red-alt rad-8 p-20 p-relative">
+                    <div class="contact">
+                        <i class="fa-solid fa-phone"></i>
+                        <i class="fa-regular fa-envelope"></i>
+                    </div>
+                    <div class="txt-c">
+                        <img src="images/ln-4.jpg" alt="" class="rad-half mt-10 mb-10 w-100">
+                        <h4 class="m-0">adel gamal</h4>
+                        <p class="mt-5 fs-12">brother</p>
+                    </div>
+                    <div class="icons p-relative">
+                        <div class="mb-10">
+                            <i class="fa-regular fa-face-smile fa-fw"></i>
+                            <span>99 friend</span>
+                        </div>
+                        <div class="mb-10">
+                            <i class="fa-solid fa-code-commit fa-fw"></i>
+                            <span>15 projects</span>
+                        </div>
+                        <div>
+                            <i class="fa-regular fa-newspaper fa-fw"></i>
+                            <span>25 articles</span>
+                        </div>
+                    </div>
+                    <div class="info between-flex">
+                        <span class="">joined 02/01/2024</span>
+                        <div class="">
+                            <a href="profile.html" class="btn-shape">profile</a>
+                            <a href="#" class="btn-shape">remove</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="friend bg-red-alt rad-8 p-20 p-relative">
+                    <div class="contact">
+                        <i class="fa-solid fa-phone"></i>
+                        <i class="fa-regular fa-envelope"></i>
+                    </div>
+                    <div class="txt-c">
+                        <img src="images/ln-2.jpg" alt="" class="rad-half mt-10 mb-10 w-100">
+                        <h4 class="m-0">yussef magdy</h4>
+                        <p class="mt-5 fs-12">brother</p>
+                    </div>
+                    <div class="icons p-relative">
+                        <div class="mb-10">
+                            <i class="fa-regular fa-face-smile fa-fw"></i>
+                            <span>99 friend</span>
+                        </div>
+                        <div class="mb-10">
+                            <i class="fa-solid fa-code-commit fa-fw"></i>
+                            <span>15 projects</span>
+                        </div>
+                        <div>
+                            <i class="fa-regular fa-newspaper fa-fw"></i>
+                            <span>25 articles</span>
+                        </div>
+                    </div>
+                    <div class="info between-flex">
+                        <span class="">joined 02/01/2024</span>
+                        <div class="">
+                            <a href="profile.html" class="btn-shape">profile</a>
+                            <a href="#" class="btn-shape">remove</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="friend bg-red-alt rad-8 p-20 p-relative">
+                    <div class="contact">
+                        <i class="fa-solid fa-phone"></i>
+                        <i class="fa-regular fa-envelope"></i>
+                    </div>
+                    <div class="txt-c">
+                        <img src="images/ln-2.jpg" alt="" class="rad-half mt-10 mb-10 w-100">
+                        <h4 class="m-0">mohammed fayyad</h4>
+                        <p class="mt-5 fs-12">brother</p>
+                    </div>
+                    <div class="icons p-relative">
+                        <div class="mb-10">
+                            <i class="fa-regular fa-face-smile fa-fw"></i>
+                            <span>99 friend</span>
+                        </div>
+                        <div class="mb-10">
+                            <i class="fa-solid fa-code-commit fa-fw"></i>
+                            <span>15 projects</span>
+                        </div>
+                        <div>
+                            <i class="fa-regular fa-newspaper fa-fw"></i>
+                            <span>25 articles</span>
+                        </div>
+                    </div>
+                    <div class="info between-flex">
+                        <span class="">joined 02/01/2024</span>
+                        <div class="">
+                            <a href="profile.html" class="btn-shape">profile</a>
+                            <a href="#" class="btn-shape">remove</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="friend bg-red-alt rad-8 p-20 p-relative">
+                    <div class="contact">
+                        <i class="fa-solid fa-phone"></i>
+                        <i class="fa-regular fa-envelope"></i>
+                    </div>
+                    <div class="txt-c">
+                        <img src="images/ln-2.jpg" alt="" class="rad-half mt-10 mb-10 w-100">
+                        <h4 class="m-0">mohammed fayyad</h4>
+                        <p class="mt-5 fs-12">brother</p>
+                    </div>
+                    <div class="icons p-relative">
+                        <div class="mb-10">
+                            <i class="fa-regular fa-face-smile fa-fw"></i>
+                            <span>99 friend</span>
+                        </div>
+                        <div class="mb-10">
+                            <i class="fa-solid fa-code-commit fa-fw"></i>
+                            <span>15 projects</span>
+                        </div>
+                        <div>
+                            <i class="fa-regular fa-newspaper fa-fw"></i>
+                            <span>25 articles</span>
+                        </div>
+                    </div>
+                    <div class="info between-flex">
+                        <span class="">joined 02/01/2024</span>
+                        <div class="">
+                            <a href="profile.html" class="btn-shape">profile</a>
+                            <a href="#" class="btn-shape">remove</a>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
         </div>
     </div>
 </body>
