--- a/plans.html
+++ b/plans.html
@@ -113,8 +113,171 @@
             </div>
             <!-- End Head -->
             <h1 class="p-relative">Plans</h1>
+            <div class="plans-page d-grid m-20 gap-20">
+                <div class="plan bg-red-alt p-20 c-gold rad-8">
+                    <div class="top bg-green txt-c p-20">
+                        <h2 class="m-0 ">Free</h2>
+                        <div class="price "><span>$</span>0.00</div>
+                    </div>
+                    <ul>
+                        <li>
+                            <i class="fa-solid fa-check fa-fw yes"></i>
+                            <span>Access All Text Lessons</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-check fa-fw yes"></i>
+                            <span>Access All Videos Lessons</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-check fa-fw yes"></i>
+                            <span>Appear On Leaderboard</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-xmark fa-fw"></i>
+                            <span>Browse Content Without Ads</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-xmark fa-fw"></i>
+                            <span>Access All Assignments</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-xmark fa-fw"></i>
+                            <span>Get Daily Prizes</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-xmark fa-fw"></i>
+                            <span>Earn Certificate</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-xmark fa-fw"></i>
+                            <span>1 GB Space For Hosting Files</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-xmark fa-fw"></i>
+                            <span>Access Badge System</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                    </ul>
+                    <a href="#" class="btn-shape d-block w-fit mt-20" style="margin-left: auto;">Join</a>
+                </div>
+                <div class="plan bg-red-alt p-20 c-gold rad-8">
+                    <div class="top bg-green txt-c p-20">
+                        <h2 class="m-0 ">Basic</h2>
+                        <div class="price "><span>$</span>7.99</div>
+                    </div>
+                    <ul>
+                        <li>
+                            <i class="fa-solid fa-check fa-fw yes"></i>
+                            <span>Access All Text Lessons</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-check fa-fw yes"></i>
+                            <span>Access All Videos Lessons</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-check fa-fw yes"></i>
+                            <span>Appear On Leaderboard</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-check fa-fw yes"></i>
+                            <span>Browse Content Without Ads</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-check fa-fw yes"></i>
+                            <span>Access All Assignments</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-check fa-fw yes"></i>
+                            <span>Get Daily Prizes</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-xmark fa-fw"></i>
+                            <span>Earn Certificate</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-xmark fa-fw"></i>
+                            <span>1 GB Space For Hosting Files</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-xmark fa-fw"></i>
+                            <span>Access Badge System</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                    </ul>
+                    <a href="#" class="btn-shape d-block w-fit mt-20" style="margin-left: auto;">Join</a>
+                </div>
+                <div class="plan bg-red-alt p-20 c-gold rad-8">
+                    <div class="top bg-green txt-c p-20">
+                        <h2 class="m-0 ">Premium</h2>
+                        <div class="price "><span>$</span>19.99</div>
+                    </div>
+                    <ul>
+                        <li>
+                            <i class="fa-solid fa-check fa-fw yes"></i>
+                            <span>Access All Text Lessons</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-check fa-fw yes"></i>
+                            <span>Access All Videos Lessons</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-check fa-fw yes"></i>
+                            <span>Appear On Leaderboard</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-check fa-fw yes"></i>
+                            <span>Browse Content Without Ads</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-check fa-fw yes"></i>
+                            <span>Access All Assignments</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-check fa-fw yes"></i>
+                            <span>Get Daily Prizes</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-check fa-fw yes"></i>
+                            <span>Earn Certificate</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-check fa-fw yes"></i>
+                            <span>1 GB Space For Hosting Files</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-check fa-fw yes"></i>
+                            <span>Access Badge System</span>
+                            <i class="fa-solid fa-circle-info help"></i>
+                        </li>
+                    </ul>
+                    <a href="#" class="btn-shape d-block w-fit mt-20" style="margin-left: auto;">Join</a>
+                </div>
+            </div>
         </div>
-    </div>
 </body>
 
 </html>
