--- a/files.html
+++ b/files.html
@@ -113,8 +113,228 @@
             </div>
             <!-- End Head -->
             <h1 class="p-relative">Files</h1>
-        </div>
-    </div>
+            <div class="files-page d-flex m-20 gap-20 c-gold txt-tf-c">
+                <div class="files-stats p-20 bg-red-alt rad-10">
+                    <h2 class="mt-0 mb-15 txt-c-mobile">Files Statistics</h2>
+                    <div class="d-flex align-center border p-10  mb-15 fs-13">
+                        <i class="fa-regular fa-file-pdf fa-lg blue center-flex c-blue icon"></i>
+                        <div class="info">
+                            <span>PDF Files</span>
+                            <span class="c-grey d-block mt-5">130</span>
+                        </div>
+                        <div class="size c-grey">6.5GB</div>
+                    </div>
+                    <div class="d-flex align-center border p-10  mb-15 fs-13">
+                        <i class="fa-regular fa-file-pdf fa-lg blue center-flex c-blue icon"></i>
+                        <div class="info">
+                            <span>PDF Files</span>
+                            <span class="c-grey d-block mt-5">130</span>
+                        </div>
+                        <div class="size c-grey">6.5GB</div>
+                    </div>
+                    <div class="d-flex align-center border p-10  mb-15 fs-13">
+                        <i class="fa-regular fa-file-pdf fa-lg blue center-flex c-blue icon"></i>
+                        <div class="info">
+                            <span>PDF Files</span>
+                            <span class="c-grey d-block mt-5">130</span>
+                        </div>
+                        <div class="size c-grey">6.5GB</div>
+                    </div>
+                    <div class="d-flex align-center border p-10  mb-15 fs-13">
+                        <i class="fa-regular fa-file-pdf fa-lg blue center-flex c-blue icon"></i>
+                        <div class="info">
+                            <span>PDF Files</span>
+                            <span class="c-grey d-block mt-5">130</span>
+                        </div>
+                        <div class="size c-grey">6.5GB</div>
+                    </div>
+                    <a href="" class="upload btn-shape">
+                        <i class="fa-solid fa-angles-up mr-10"></i>
+                        upload
+                    </a>
+                </div>
+                <div class="files-content d-grid gap-20">
+                    <div class="file bg-red-alt p-10 rad-10">
+                        <i class="fa-solid fa-download c-grey p-absolute"></i>
+                        <div class="icon txt-c">
+                            <img decoding="async" class="mt-15 mb-15" src="images/f-png.svg" alt="" />
+                        </div>
+                        <div class="txt-c mb-10 fs-14">my-file.pdf</div>
+                        <p class="c-grey fs-13">fayyad</p>
+                        <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
+                    </div>
+                    <div class="file bg-red-alt p-10 rad-10">
+                        <i class="fa-solid fa-download c-grey p-absolute"></i>
+                        <div class="icon txt-c">
+                            <img decoding="async" class="mt-15 mb-15" src="images/f-sql.svg" alt="" />
+                        </div>
+                        <div class="txt-c mb-10 fs-14">my-file.avi</div>
+                        <p class="c-grey fs-13">Admin</p>
+                        <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                            <span>16/5/2021</span>
+                            <span>12.5MB</span>
+                        </div>
+                    </div>
+                    <div class="file bg-red-alt p-10 rad-10">
+                        <i class="fa-solid fa-download c-grey p-absolute"></i>
+                        <div class="icon txt-c">
+                            <img decoding="async" class="mt-15 mb-15" src="images/f-avi.svg" alt="" />
+                        </div>
+                        <div class="txt-c mb-10 fs-14">my-file.pdf</div>
+                        <p class="c-grey fs-13">fayyad</p>
+                        <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
+                    </div>
+                    <div class="file bg-red-alt p-10 rad-10">
+                        <i class="fa-solid fa-download c-grey p-absolute"></i>
+                        <div class="icon txt-c">
+                            <img decoding="async" class="mt-15 mb-15" src="images/f-dll.svg" alt="" />
+                        </div>
+                        <div class="txt-c mb-10 fs-14">my-file.pdf</div>
+                        <p class="c-grey fs-13">fayyad</p>
+                        <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
+                    </div>
+                    <div class="file bg-red-alt p-10 rad-10">
+                        <i class="fa-solid fa-download c-grey p-absolute"></i>
+                        <div class="icon txt-c">
+                            <img decoding="async" class="mt-15 mb-15" src="images/f-zip.svg" alt="" />
+                        </div>
+                        <div class="txt-c mb-10 fs-14">my-file.pdf</div>
+                        <p class="c-grey fs-13">fayyad</p>
+                        <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
+                    </div>
+                    <div class="file bg-red-alt p-10 rad-10">
+                        <i class="fa-solid fa-download c-grey p-absolute"></i>
+                        <div class="icon txt-c">
+                            <img decoding="async" class="mt-15 mb-15" src="images/f-avi.svg" alt="" />
+                        </div>
+                        <div class="txt-c mb-10 fs-14">my-file.pdf</div>
+                        <p class="c-grey fs-13">fayyad</p>
+                        <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
+                    </div>
+                    <div class="file bg-red-alt p-10 rad-10">
+                        <i class="fa-solid fa-download c-grey p-absolute"></i>
+                        <div class="icon txt-c">
+                            <img decoding="async" class="mt-15 mb-15" src="images/f-avi.svg" alt="" />
+                        </div>
+                        <div class="txt-c mb-10 fs-14">my-file.pdf</div>
+                        <p class="c-grey fs-13">fayyad</p>
+                        <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
+                    </div>
+                    <div class="file bg-red-alt p-10 rad-10">
+                        <i class="fa-solid fa-download c-grey p-absolute"></i>
+                        <div class="icon txt-c">
+                            <img decoding="async" class="mt-15 mb-15" src="images/f-avi.svg" alt="" />
+                        </div>
+                        <div class="txt-c mb-10 fs-14">my-file.pdf</div>
+                        <p class="c-grey fs-13">fayyad</p>
+                        <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
+                    </div>
+                    <div class="file bg-red-alt p-10 rad-10">
+                        <i class="fa-solid fa-download c-grey p-absolute"></i>
+                        <div class="icon txt-c">
+                            <img decoding="async" class="mt-15 mb-15" src="images/f-avi.svg" alt="" />
+                        </div>
+                        <div class="txt-c mb-10 fs-14">my-file.pdf</div>
+                        <p class="c-grey fs-13">fayyad</p>
+                        <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
+                    </div>
+                    <div class="file bg-red-alt p-10 rad-10">
+                        <i class="fa-solid fa-download c-grey p-absolute"></i>
+                        <div class="icon txt-c">
+                            <img decoding="async" class="mt-15 mb-15" src="images/f-png.svg" alt="" />
+                        </div>
+                        <div class="txt-c mb-10 fs-14">my-file.pdf</div>
+                        <p class="c-grey fs-13">fayyad</p>
+                        <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
+                    </div>
+                    <div class="file bg-red-alt p-10 rad-10">
+                        <i class="fa-solid fa-download c-grey p-absolute"></i>
+                        <div class="icon txt-c">
+                            <img decoding="async" class="mt-15 mb-15" src="images/f-avi.svg" alt="" />
+                        </div>
+                        <div class="txt-c mb-10 fs-14">my-file.pdf</div>
+                        <p class="c-grey fs-13">fayyad</p>
+                        <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
+                    </div>
+                    <div class="file bg-red-alt p-10 rad-10">
+                        <i class="fa-solid fa-download c-grey p-absolute"></i>
+                        <div class="icon txt-c">
+                            <img decoding="async" class="mt-15 mb-15" src="images/f-png.svg" alt="" />
+                        </div>
+                        <div class="txt-c mb-10 fs-14">my-file.pdf</div>
+                        <p class="c-grey fs-13">fayyad</p>
+                        <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
+                    </div>
+                    <div class="file bg-red-alt p-10 rad-10">
+                        <i class="fa-solid fa-download c-grey p-absolute"></i>
+                        <div class="icon txt-c">
+                            <img decoding="async" class="mt-15 mb-15" src="images/f-sql.svg" alt="" />
+                        </div>
+                        <div class="txt-c mb-10 fs-14">my-file.pdf</div>
+                        <p class="c-grey fs-13">fayyad</p>
+                        <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
+                    </div>
+                    <div class="file bg-red-alt p-10 rad-10">
+                        <i class="fa-solid fa-download c-grey p-absolute"></i>
+                        <div class="icon txt-c">
+                            <img decoding="async" class="mt-15 mb-15" src="images/f-txt.svg" alt="" />
+                        </div>
+                        <div class="txt-c mb-10 fs-14">my-file.pdf</div>
+                        <p class="c-grey fs-13">fayyad</p>
+                        <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
+                    </div>
+                    <div class="file bg-red-alt p-10 rad-10">
+                        <i class="fa-solid fa-download c-grey p-absolute"></i>
+                        <div class="icon txt-c">
+                            <img decoding="async" class="mt-15 mb-15" src="images/f-dll.svg" alt="" />
+                        </div>
+                        <div class="txt-c mb-10 fs-14">my-file.pdf</div>
+                        <p class="c-grey fs-13">fayyad</p>
+                        <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+                            <span>20/06/2020</span>
+                            <span>5.5MB</span>
+                        </div>
+                    </div>
+                </div>
 </body>
 
 </html>
